--- a/style.css
+++ b/style.css
@@ -211,3 +211,61 @@ header ul li a:hover{
     /* Tamanho --> Lado --> Posição */
     clip-path: circle(600px at right 800px);
 }
+
+/* ***********Responsividades*********** */
+@media (max-width: 992px){
+    header{
+        padding: 20px;
+    }
+    
+    header .logo{
+        max-width: 60px;
+    }
+
+    header ul{
+        /* Ocultar Lista */
+        display: none;
+    }
+
+    /* Menu Hamburguer */
+    .toggle{
+        position: relative;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+        background: url(assets/menu.png);
+        background-size: 30px;
+        background-position: center;
+        background-repeat: no-repeat;
+        filter: invert(1);
+        z-index: 11;
+    }
+
+    .toggle .active{
+        position: fixed;
+        right: 20px;
+        /* Preemchendo com uma imagem 'fechar' */
+        background: url(assets/close.png);
+        background-size: 25px;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    /* Formar lista 'menu hamburger' */
+    header ul.links.active{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 40%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #f2f2f2;
+        z-index: 10;
+    }
+    header ul li a{
+        font-size: 1.5em;
+        margin: 5px 0;
+    }
+}
